# contentforge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/contentforge/: __init__.py  __main__.py  cli.py  config.py  output.py
src/contentforge/commands/: config_cmd.py  generate.py  providers_cmd.py  templates_cmd.py
src/contentforge/providers/: __init__.py  base.py  gemini_provider.py  ollama_provider.py  openai_provider.py
src/contentforge/templates/: __init__.py  models.py  registry.py
tests/: conftest.py  test_cli.py  test_config.py  test_output.py  test_providers.py  test_templates.py
